# anbric

./: README.md  pyproject.toml  setup.cfg
src/: __main__.py
src/anbric/: api.py  cli.py  core.py
src/anbric/ansible/: __init__.py  modules.py
src/anbric/modules/: file.py
src/fabfab/: core.py
test/: ansible.cfg  command.py  docker-compose.yml  elk.py  handler_identity.py  hosts.ini  hosts.toml  settings.py
test/docker/: Dockerfile  host_key  host_key.pub  known_hosts  test_key  test_key.pub
