[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]

build-backend = "setuptools.build_meta"

[tool.poetry]
name = "anbric"
version = "0.1.0"
description = ""
authors = ["Filip Sedlak <filip@sedlakovi.org>"]
packages = [
    { include = "anbric", from = "src" },
]

[tool.poetry.scripts]
anbric-play = 'anbric.cli:anbric_play'


[tool.poetry.dependencies]
python = ">=3.8,<4"
ansible = {version="^4", optional=true}
mitogen = {git = "ssh://git@github.com/mitogen-hq/mitogen", rev = "5b505f5"}
toml = "^0.10.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6"
ipython = "*"

[tool.poetry.extras]
ansible = ["ansible"]

