[metadata]
name = fabfab
version = 0.0.1
author = Filip Sedlák
author_email = filip@sedlakovi.org
description = Extension utilities for Fabric 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crabhi/fabfab
project_urls =
    Bug Tracker = https://github.com/crabhi/fabfab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
